Updating R-NSGA-II and R-NSGA-III documentation

--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -130,3 +130,22 @@ month={June},}
  address = {New York, NY, USA},
  keywords = {real-parameter optimization, recombination operator, self-adaptation, simulated binary crossover},
 }
+
+@inproceedings{rnsga2,
+ author = {Deb, Kalyanmoy and Sundar, J.},
+ title = {Reference Point Based Multi-objective Optimization Using Evolutionary Algorithms},
+ booktitle = {Proceedings of the 8th Annual Conference on Genetic and Evolutionary Computation},
+ series = {GECCO '06},
+ year = {2006},
+ isbn = {1-59593-186-4},
+ location = {Seattle, Washington, USA},
+ pages = {635--642},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1143997.1144112},
+ doi = {10.1145/1143997.1144112},
+ acmid = {1144112},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {decision making, multi-objective optimization, preference-based optimization, reference points},
+} 
+
