--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -10,9 +10,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. toctree::\n",
+    "   :hidden:\n",
+    "   :maxdepth: 1\n",
+    "\n",
+    "   ackley.ipynb\n",
+    "   bnh.ipynb\n",
+    "   griewank.ipynb\n",
+    "   rastrigin.ipynb\n",
+    "   zakharov.ipynb\n",
+    "   zdt.ipynb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -20,7 +33,7 @@
    "source": [
     "## Test Problems\n",
     "\n",
-    "Some problems copied from https://www.sfu.ca/~ssurjano/"
+    "Some problems copied from https://www.sfu.ca/~ssurjano/\n"
    ]
   },
   {
@@ -34,9 +47,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|Problem|Description|\n",
-    "|-|-|\n",
-    "|[Ackley](ackley.ipynb)||"
+    "|Problem|Variables|Constraints|Description|\n",
+    "|-|-|-|-|\n",
+    "|[Ackley](ackley.ipynb)|s|&nbsp;||\n",
+    "|Cantilevered Beams|4|2||\n",
+    "|[Griewank](griewank.ipynb)|s|&nbsp;||\n",
+    "|Himmelblau|2|&nbsp;||\n",
+    "|Knapsack|s|1||\n",
+    "|Pressure Vessel|4|4||\n",
+    "|[Rastrigin](rastrigin.ipynb)|s|&nbsp;||\n",
+    "|[Rosenbrock](rosenbrock.ipynb)|s|&nbsp;||\n",
+    "|Schwefel|s|&nbsp;||\n",
+    "|Sphere|s|&nbsp;||\n",
+    "|[Zakharov](zakharov.ipynb)|s|&nbsp;||\n",
+    "|G01|13|9||\n",
+    "|G02|20|2||\n",
+    "|G03|10|1||\n",
+    "|G04|5|6||\n",
+    "|G05|4|5||\n",
+    "|G06|2|2||\n",
+    "|G07|10|8||\n",
+    "|G08|2|2||\n",
+    "|G09|8|6||\n"
    ]
   },
   {
@@ -50,9 +82,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|Problem|Description|\n",
-    "|-|-|\n",
-    "|[ZDT](zdt.ipynb)||"
+    "|Problem|Variables|Objectives|Constraints|Description\n",
+    "|:---|:---|:---|:---|:---|\n",
+    "|[BNH](bnh.ipynb)|2|2|2||\n",
+    "|Carside|7|3|10||\n",
+    "|Kursawe|3|2|&nbsp;||\n",
+    "|OSY|6|2|6||\n",
+    "|TNK|2|2|2||\n",
+    "|Truss2D|3|2|1||\n",
+    "|Welded Beam|4|2|4||\n",
+    "|CTP1|2|2|&nbsp;||\n",
+    "|CTP2|2|1|&nbsp;||\n",
+    "|CTP3|2|1|&nbsp;||\n",
+    "|CTP4|2|1|&nbsp;||\n",
+    "|CTP5|2|1|&nbsp;||\n",
+    "|CTP6|2|1|&nbsp;||\n",
+    "|CTP7|2|1|&nbsp;||\n",
+    "|CTP8|2|2|&nbsp;||\n",
+    "|[ZDT1](zdt.ipynb#zdt1)|30|2|&nbsp;||\n",
+    "|[ZDT2](zdt.ipynb#zdt2)|30|2|&nbsp;||\n",
+    "|[ZDT3](zdt.ipynb#zdt3)|30|2|&nbsp;||\n",
+    "|[ZDT4](zdt.ipynb#zdt4)|10|2|&nbsp;||\n",
+    "|[ZDT5](zdt.ipynb#zdt5)|80|2|&nbsp;||\n",
+    "|[ZDT6](zdt.ipynb#zdt6)|30|2|&nbsp;||"
    ]
   },
   {
@@ -68,15 +120,17 @@
    "source": [
     "|Problem|Description|\n",
     "|-|-|\n",
-    "|[Ackley](ackley.ipynb)||"
+    "|DTLZ1||\n",
+    "|DTLZ2||\n",
+    "|DTLZ3||\n",
+    "|DTLZ4||\n",
+    "|DTLZ5||\n",
+    "|DTLZ6||\n",
+    "|DTLZ7||\n",
+    "|DTLZ1^-1||\n",
+    "|Scaled DTLZ||\n",
+    "|Convex DTLZ||"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
