--- a/doc/source/problems/zakharov.ipynb
+++ b/doc/source/problems/zakharov.ipynb
@@ -6,16 +6,16 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. _nb_griewank:"
+    ".. _nb_zakharov:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Griewank\n",
+    "## Zakharov\n",
     "\n",
-    "The Griewank function has many widespread local minima, which are regularly distributed. The complexity is shown in the zoomed-in plots. "
+    "The Zakharov function has no local minima except the global one. It is shown here in its two-dimensional form."
    ]
   },
   {
@@ -31,8 +31,8 @@
    "source": [
     "\\begin{align}\n",
     "\\begin{split}\n",
-    "f(x) & = & \\; \\sum_{n=1}^n \\; \\frac{x_i^2}{4000} - \\prod_{n=1}^n \\cos \\Bigg( \\frac{x_i}{\\sqrt{i}} \\Bigg) + 1 \\\\[4mm]\n",
-    "&&-600 \\leq x_i \\leq 600 \\quad i=1 \\ldots,n \\\\[4mm]\n",
+    "f(x) &=& \\sum\\limits_{i=1}^n {x_i^2} + \\bigg( \\frac{1}{2} \\sum\\limits_{i=1}^n {ix_i} \\bigg)^2 + \\bigg( \\frac{1}{2} \\sum\\limits_{i=1}^n {ix_i} \\bigg)^4, \\\\[2mm]\n",
+    "&& -10 \\leq x_i \\leq 10 \\quad i=1,\\ldots,n\n",
     "\\end{split}\n",
     "\\end{align}"
    ]
