--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -212,3 +212,41 @@ keywords={evolutionary computation;Pareto optimisation;multiobjective evolutiona
 doi={10.1109/TEVC.2009.2017515},
 ISSN={1089-778X},
 month={Aug},}
+
+
+@article{zdt,
+author = {Zitzler, Eckart and Deb, Kalyanmoy and Thiele, Lothar},
+title = {Comparison of Multiobjective Evolutionary Algorithms: Empirical Results},
+journal = {Evolutionary Computation},
+volume = {8},
+number = {2},
+pages = {173-195},
+year = {2000},
+doi = {10.1162/106365600568202},
+URL = { https://doi.org/10.1162/106365600568202},
+eprint = { https://doi.org/10.1162/106365600568202}
+}
+
+
+@INPROCEEDINGS{bnh,
+    author = {To Thanh Binh and Ulrich Korn},
+    title = {MOBES: A Multiobjective Evolution Strategy for Constrained Optimization Problems},
+    booktitle = {IN PROCEEDINGS OF THE THIRD INTERNATIONAL CONFERENCE ON GENETIC ALGORITHMS (MENDEL97},
+    year = {1997},
+    pages = {176--182},
+    publisher = {}
+}
+
+@article{rosenbrock,
+  doi = {10.1093/comjnl/3.3.175},
+  url = {https://doi.org/10.1093/comjnl/3.3.175},
+  year  = {1960},
+  month = {mar},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {3},
+  number = {3},
+  pages = {175--184},
+  author = {H. H. Rosenbrock},
+  title = {An Automatic Method for Finding the Greatest or Least Value of a Function},
+  journal = {The Computer Journal}
+}
