--- a/doc/source/algorithms/differential_evolution.ipynb
+++ b/doc/source/algorithms/differential_evolution.ipynb
@@ -52,25 +52,27 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "code": "algorithms/usage_de.py"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [ 1.37281076e-04 -1.27876078e-04  3.81636045e-04  3.30396950e-05\n",
-      "  2.76834686e-04 -4.35046623e-04  2.04874201e-04  1.46332937e-04\n",
-      " -2.09038998e-05  4.82036455e-04]\n",
-      "F = [0.00109503]\n"
+      "X = [-9.99368155e-04 -5.99760560e-04  1.26774670e-04 -3.14340414e-05\n",
+      "  8.81040453e-04  1.90413133e-04  3.84189040e-04 -9.56957257e-04\n",
+      " -7.56042120e-06  8.01898132e-04]\n",
+      "F = [0.00251697]\n"
      ]
     }
    ],
    "source": [
     "from pymoo.algorithms.so_de import de\n",
+    "from pymoo.factory import get_problem\n",
     "from pymoo.operators.sampling.latin_hypercube_sampling import LatinHypercubeSampling\n",
     "from pymoo.optimize import minimize\n",
-    "from pymop.factory import get_problem\n",
     "\n",
     "method = de(\n",
     "    pop_size=100,\n",
@@ -125,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
