--- a/doc/source/algorithms/genetic_algorithm.ipynb
+++ b/doc/source/algorithms/genetic_algorithm.ipynb
@@ -56,24 +56,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "code": "algorithms/usage_ga.py"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [0.99478403 0.9946165  0.97894618 0.98044142 0.97800612 0.99734025\n",
-      " 0.9991285  0.96405249 0.99208299 2.77798425 2.97355975 2.86639229\n",
-      " 0.97567989]\n",
-      "F = [-14.27257716]\n"
+      "X = [0.99750394 0.99943496 0.99537888 0.99907806 0.94941383 0.97748865\n",
+      " 0.95610327 0.99945668 0.98123708 2.84399044 2.86050567 2.79814241\n",
+      " 0.99453729]\n",
+      "F = [-14.3179983]\n"
      ]
     }
    ],
    "source": [
     "from pymoo.algorithms.so_genetic_algorithm import ga\n",
+    "from pymoo.factory import get_problem\n",
     "from pymoo.optimize import minimize\n",
-    "from pymop.factory import get_problem\n",
     "\n",
     "method = ga(\n",
     "    pop_size=100,\n",
@@ -84,7 +86,8 @@
     "               termination=('n_gen', 50),\n",
     "               disp=False)\n",
     "\n",
-    "print(\"Best solution found: \\nX = %s\\nF = %s\" % (res.X, res.F))\n"
+    "print(\"Best solution found: \\nX = %s\\nF = %s\" % (res.X, res.F))\n",
+    "\n"
    ]
   },
   {
@@ -122,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
