--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|Problem|Variables|Constraints|Description|\n",
+    "|Problem|Variables|Constraints|Type|\n",
     "|-|-|-|-|\n",
     "|[Ackley](ackley.ipynb)|s|&nbsp;||\n",
     "|Cantilevered Beams|4|2||\n",
@@ -91,20 +91,20 @@
     "|TNK|2|2|2||\n",
     "|Truss2D|3|2|1||\n",
     "|Welded Beam|4|2|4||\n",
-    "|CTP1|2|2|&nbsp;||\n",
-    "|CTP2|2|1|&nbsp;||\n",
-    "|CTP3|2|1|&nbsp;||\n",
-    "|CTP4|2|1|&nbsp;||\n",
-    "|CTP5|2|1|&nbsp;||\n",
-    "|CTP6|2|1|&nbsp;||\n",
-    "|CTP7|2|1|&nbsp;||\n",
-    "|CTP8|2|2|&nbsp;||\n",
+    "|CTP1|2|2|(s)||\n",
+    "|CTP2|2|2|(s)||\n",
+    "|CTP3|2|2|(s)||\n",
+    "|CTP4|2|2|(s)||\n",
+    "|CTP5|2|2|(s)||\n",
+    "|CTP6|2|2|(s)||\n",
+    "|CTP7|2|2|(s)||\n",
+    "|CTP8|2|2|(s)||\n",
     "|[ZDT1](zdt.ipynb#zdt1)|30|2|&nbsp;||\n",
     "|[ZDT2](zdt.ipynb#zdt2)|30|2|&nbsp;||\n",
     "|[ZDT3](zdt.ipynb#zdt3)|30|2|&nbsp;||\n",
     "|[ZDT4](zdt.ipynb#zdt4)|10|2|&nbsp;||\n",
     "|[ZDT5](zdt.ipynb#zdt5)|80|2|&nbsp;||\n",
-    "|[ZDT6](zdt.ipynb#zdt6)|30|2|&nbsp;||"
+    "|[ZDT6](zdt.ipynb#zdt6)|10|2|&nbsp;||"
    ]
   },
   {
