Added GD+ and IGD+

--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -89,7 +89,7 @@
     "|Kursawe|3|2|&nbsp;||\n",
     "|OSY|6|2|6||\n",
     "|TNK|2|2|2||\n",
-    "|Truss2D|3|2|1||\n",
+    "|[Truss2D](truss2d.ipynb)|3|2|1||\n",
     "|Welded Beam|4|2|4||\n",
     "|CTP1|2|2|(s)||\n",
     "|CTP2|2|2|(s)||\n",
