--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -250,3 +250,40 @@ eprint = { https://doi.org/10.1162/106365600568202}
   title = {An Automatic Method for Finding the Greatest or Least Value of a Function},
   journal = {The Computer Journal}
 }
+
+
+@inproceedings{truss2d,
+ author = {Deb, Kalyanmoy and Srinivasan, Aravind},
+ title = {Innovization: Innovating Design Principles Through Optimization},
+ booktitle = {Proceedings of the 8th Annual Conference on Genetic and Evolutionary Computation},
+ series = {GECCO '06},
+ year = {2006},
+ isbn = {1-59593-186-4},
+ location = {Seattle, Washington, USA},
+ pages = {1629--1636},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1143997.1144266},
+ doi = {10.1145/1143997.1144266},
+ acmid = {1144266},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {design principles, innovative design, knowledge discovery, multi-objective optimization},
+}
+
+@InProceedings{igd_plus,
+author="Ishibuchi, Hisao
+and Masuda, Hiroyuki
+and Tanigaki, Yuki
+and Nojima, Yusuke",
+editor="Gaspar-Cunha, Ant{\'o}nio
+and Henggeler Antunes, Carlos
+and Coello, Carlos Coello",
+title="Modified Distance Calculation in Generational Distance and Inverted Generational Distance",
+booktitle="Evolutionary Multi-Criterion Optimization",
+year="2015",
+publisher="Springer International Publishing",
+address="Cham",
+pages="110--125",
+isbn="978-3-319-15892-1"
+}
+
