decomposition change and added perp_dist

--- a/doc/source/components/decomposition.ipynb
+++ b/doc/source/components/decomposition.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "code": "usage_performance_indicator.py",
     "section": "load_data"
@@ -228,12 +228,12 @@
     }
    ],
    "source": [
-    "plot_contour(X, get_decomposition(\"aasf\", eps=0).do(X, weights=weights, beta=5))"
+    "plot_contour(X, get_decomposition(\"aasf\", eps=0, beta=5).do(X, weights=weights))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "code": "usage_performance_indicator.py",
     "section": "load_data"
@@ -257,7 +257,7 @@
     }
    ],
    "source": [
-    "plot_contour(X, get_decomposition(\"aasf\", eps=0).do(X, weights=weights, beta=25))"
+    "plot_contour(X, get_decomposition(\"aasf\", eps=0, beta=25).do(X, weights=weights))"
    ]
   },
   {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "code": "usage_performance_indicator.py",
     "section": "load_data"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
