Added NoMutation Added time for termination Added CMAES

--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -22,6 +22,7 @@
     "   differential_evolution\n",
     "   genetic_algorithm\n",
     "   nelder_mead\n",
+    "   cmaes\n",
     "   nsga2\n",
     "   rnsga2\n",
     "   nsga3\n",
@@ -48,6 +49,7 @@
     "|[Differential Evolution](differential_evolution.ipynb)|\"DE\"|\"de\"\n",
     "|[Genetic Algorithm](genetic_algorithm.ipynb)|\"GA\"|\"ga\"\n",
     "|[Nelder Mead](nelder_mead.ipynb)|\"NelderMead\"|\"nelder-mead\"\n",
+    "|[CMAES](cmaes.ipynb)|\"CMAES\"|\"cmaes\"\n",
     "|[NSGA-II](nsga2.ipynb)|\"NSGA2\"|\"nsga2\"\n",
     "|[RNSGA-II](rnsga2.ipynb)|\"RNSGA2\"|\"rnsga2\"\n",
     "|[NSGA-III](nsga3.ipynb)|\"NSGA3\"|\"nsga3\"\n",
@@ -100,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
