--- a/doc/source/getting_started.ipynb
+++ b/doc/source/getting_started.ipynb
@@ -320,7 +320,7 @@
     "[Optimization Test Problems](problems/index.ipynb) | \n",
     "[Define a Custom Problem](problems/custom.ipynb) | \n",
     "[Parallelization](problems/parallelization.ipynb)\n",
-    "[Callback](tutorial/callback.ipynb)\n"
+    "[Callback](misc/callback.ipynb)\n"
    ]
   },
   {
@@ -607,7 +607,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plot\n",
+    "import matplotlib.pyplot as plt\n",
     "from pymoo.performance_indicator.hv import Hypervolume\n",
     "\n",
     "# create the performance indicator object with reference point (4,4)\n",
