--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -419,3 +419,51 @@ author = "Andrzej P. Wierzbicki",
 
 
 
+@misc{pycma,
+  author       = {Nikolaus Hansen and Youhei Akimoto and Petr Baudis},
+  title        = {{CMA-ES/pycma} on {G}ithub},
+  howpublished = {Zenodo, DOI:10.5281/zenodo.2559634},
+  month        = feb,
+  year         = 2019,
+  doi          = {10.5281/zenodo.2559634},
+  url          = {https://doi.org/10.5281/zenodo.2559634},
+}
+
+
+
+@Inbook{cmaes-review,
+author="Hansen, Nikolaus",
+editor="Lozano, Jose A.
+and Larra{\~{n}}aga, Pedro
+and Inza, I{\~{n}}aki
+and Bengoetxea, Endika",
+title="The CMA Evolution Strategy: A Comparing Review",
+bookTitle="Towards a New Evolutionary Computation: Advances in the Estimation of Distribution Algorithms",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="75--102",
+isbn="978-3-540-32494-2",
+doi="10.1007/3-540-32494-1_4",
+url="https://doi.org/10.1007/3-540-32494-1_4"
+}
+
+
+@article{cmaes,
+ author = {Hansen, Nikolaus and Ostermeier, Andreas},
+ title = {Completely Derandomized Self-Adaptation in Evolution Strategies},
+ journal = {Evol. Comput.},
+ issue_date = {June 2001},
+ volume = {9},
+ number = {2},
+ month = jun,
+ year = {2001},
+ issn = {1063-6560},
+ pages = {159--195},
+ numpages = {37},
+ url = {http://dx.doi.org/10.1162/106365601750190398},
+ doi = {10.1162/106365601750190398},
+ acmid = {1108843},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+}
